# NextFlix

./: README.md
server/: .env  CMakeLists.txt  Dockerfile  docker-compose.yml  run.sh
server/src/recommend-client/: client.py
server/src/recommend-server/IO_handling/: ConsoleInput.cpp  ConsoleInput.h  ConsoleOutput.cpp  ConsoleOutput.h  IInputHandler.h  IOutputHandler.h  SocketInput.cpp  SocketInput.h  SocketOutput.cpp  SocketOutput.h
server/src/recommend-server/commands/: DeleteCommand.cpp  DeleteCommand.h  GetCommand.cpp  GetCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  PatchCommand.cpp  PatchCommand.h  PostCommand.cpp  PostCommand.h
server/src/recommend-server/data_handling/: FileDataExporter.cpp  FileDataExporter.h  FileDataLoader.cpp  FileDataLoader.h  IDataExporter.h  IDataLoader.h
server/src/recommend-server/main_body/: Application.cpp  Application.h  ClientHandler.cpp  ClientHandler.h  MovieDatabase.cpp  MovieDatabase.h  Server.cpp
server/src/recommend-server/thread_handling/: DetachedThreadHandler.cpp  DetachedThreadHandler.h  IThreadHandler.h  ThreadPool.cpp  ThreadPool.h
server/src/web-server/: .env  app.js  package-lock.json  package.json  server.js
server/src/web-server/controllers/: categories.js  movies.js  tokens.js  users.js
server/src/web-server/middleware/: adminMiddlewere.js  authMiddleware.js  errorHandler.js  uploadMiddleware.js
server/src/web-server/models/: categories.js  idMapping.js  movies.js  token.js  user.js
server/src/web-server/routes/: categories.js  movies.js  tokens.js  upload.js  users.js
server/src/web-server/services/: categories.js  idMapping.js  movies.js  password.js  recommend.js  token.js  user.js
(+245 files in other folders)
